# TBGE

./: .bazelrc  .clang-tidy  .clang_tidy  .gitignore  BUILD  BUILD.bazel  COMPLETION_REPORT.md  Doxyfile  FIXES_SUMMARY.md  LICENSE  MODULE.bazel  QUICK_REFERENCE.md  README.md  TBGE.sln  TEST_MIGRATION_GUIDE.md  WORKSPACE  WORKSPACE.bazel  build.sh  docs.sh  doxygen.sh  doxygen_linux.sh  hello_test.cc  main.cpp  test_all.sh
TBGE/: TBGE.vcxproj  TBGE.vcxproj.filters
TBGE/docs/: DefaultSettings
TBGE/include/game_object/: game_object.h
TBGE/include/global/: global_singleton.h
TBGE/lib/game_object/: game_object.cpp
TBGE/lib/global/: global_singleton.cpp
TBGE/src/: TBGE.cpp
bazel-bin/include/: SolutionLib.lib-2.params
bazel-bin/src/: main.exe-2.params  main.exe.runfiles_manifest
bazel-out/: stable-status.txt  volatile-status.txt
bazel-out/_tmp/actions/: stdout-11  stdout-11-0  stdout-12-0  stdout-9-0
bazel-tbge/src/: BUILD  main.cc
docs/: DefaultSettings.doxygen
docs/config/: Default  Linux
include/: BUILD
include/command/: Command.hh
include/gameObjects/: InteractableObject.hh
lib/game/: game.cpp  game.h
lib/game_object/: game_object.cpp  game_object.h
lib/object/: object.cpp  object.h
notes/: ASCII logo design ideas.txt  Classes.drawio  ECS  Message System Idea.leo
src/: BUILD  main.cc  main.cpp  tbge.h
src/command/: command.cc  command.h
src/command/command_action/: command_action.h  print.h
src/component/: component.cc  component.h  print_component.h
src/component/util/: utilPrintHandler.cc  utilPrintHandler.h
src/components/: BUILD  exit_component.h  location_component.h  lock_component.h  player_component.h
src/ecs/: BUILD  component_array.h  component_array.tcc  component_manager.cc  component_manager.h  component_manager.tcc  config.h  context.h  coordinator.cc  coordinator.h  coordinator.tcc  definitions.h  ecs.h  ecs_logsink.h  entity_manager.cc  entity_manager.h  entity_manager.tcc  system.h  system_manager.cc  system_manager.h  system_manager.tcc
src/ecs/component/: BUILD  component.h
src/ecs/component_array/: BUILD  component_array.h  component_array.tcc
src/ecs/component_manager/: BUILD  component_manager.cc  component_manager.h  (+1 more)
src/game_object/: game_object.cc  game_object.h  game_object.hh
src/global/: global.cc  global.h
src/lib/: BUILD
src/panel/: panel.cc  panel.h  panel.tcc  panel_system.cc  panel_system.h  panel_system.tcc
src/systems/: exit_controller.cc  exit_controller.h  location_controller.cc  location_controller.h  player.cc  player.h
src/terminal/: BUILD  terminal.h  terminal_constants.h  terminal_functions.h
src/tests/: game_object_test.cpp
src/tui/: tui.h  tui_constants.h  tui_functions.h
test/: BUILD  main_test.cc  test_main.cc
test/ecs/: component_array_test.cc  component_manager_test.cc  context_test.cc  coordinator_test.cc  entity_manager_test.cc  system_manager_test.cc  system_test.cc
test/includes/: test_log_sink.h
tests/: game_object_test.cpp  game_test.cpp  object_test.cpp  test_main.cc
tests/command/: command_test.h
tests/component/: component_test.h  print_test.h
tests/game_object/: game_object_test.cc  game_object_test.h
tests/global/: global_test.h
tests/mocks/: mock_print.h
(+60 files in other folders)
