cc_binary(
  name = "release",
  srcs = glob(["src/lib/**/*.cpp"]) + 
    ["src/main.cpp"],
  includes = glob(["src/lib/**/*.h"]),
)

cc_binary(
  name = "debug",
  srcs = glob(["src/lib/**/*.cpp"]) + 
    ["src/main.cpp"],
  includes = glob(["src/lib/**/*.h"]),
)

cc_test(
  name = "test_all",
  size = "small",
  srcs = glob([
    "src/lib/**/*.cpp",
    "src/tests/**/*.cpp"
  ]),
  includes = glob([
    "src/lib/**/*.h"
  ]),
  deps = ["@gtest//:gtest_main"],
)