cc_binary(
  name = "release",
  srcs = glob(["lib/**/*.cpp"]) + 
    ["main.cpp"],
  includes = glob(["lib/**/*.h"]),
  deps = [
    "@shl"
  ],
)

cc_binary(
  name = "debug",
  srcs = glob(["lib/**/*.cpp"]) + 
    ["main.cpp"],
  includes = glob(["lib/**/*.h"]),
  deps = [
    "@shl"
  ],
)

cc_test(
  name = "all",
  size = "small",
  srcs = glob(["tests/*.cpp", "lib/**/*.cpp"]),
  includes = glob(["lib/**/*.h"]),
  deps = [
    "@gtest//:gtest_main",
    "@shl//:shl"
  ],
)