###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

# FILEPATH: /c:/Users/Seedback/c++_projects/TBGE/MODULE.bazel

"""This is a Bazel module file for managing external dependencies."""

# BEGIN: ed8c6549bwf9
module(
    name = "tbge",
    version = "0.0.1",
)

bazel_dep(name = "googletest", version = "1.14.0", repo_name = "gtest",)
# END: ed8c6549bwf9
