"""Module definition for tbge project."""

module(
  name = "tbge",
  version = "0.0.0",
)

bazel_dep(name = "rules_cc", version = "0.1.3")

# Choose the most recent version available at
# https://registry.bazel.build/modules/googletest
bazel_dep(name = "googletest", version = "1.17.0.bcr.2")

# Choose the most recent version available at
# https://registry.bazel.build/modules/abseil-cpp.
bazel_dep(name = "abseil-cpp", version = "20250512.1")