load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "gtest",
    remote = "https://github.com/google/googletest",
    commit = "58d77fa8070e8cec2dc1ed015d66b454c8d78850",
    shallow_since = "1656350095 -0400",
    recursive_init_submodules = True,
)

git_repository(
    name = "shl",
    remote = "https://github.com/seedback/SHL/",
    commit = "857996c6b0534da25ec707a915d556d5dba4b98b",
    shallow_since = "1665780604 +0200",
)